# CPEN455-Project-2025W1

./: .gitignore  README.md  kaggle_submission.csv  pyproject.toml  token_count.py
autograder/: .gitignore  auto_grader.py  auto_grader.sh  dataset.py
autograder/cpen455_released_datasets/: augmented_train_val_subset.csv  test_subset.csv  test_subset_random_labels.csv  train_val_subset.csv
examples/: bayes_inverse.py  bayes_inverse_full_finetune.sh  bayes_inverse_lora.sh  bayes_inverse_prefix_tuning.sh  bayes_inverse_wpoe.py  create_soup.py  evaluate_soup.py  hyperparameter_search.py  hyperparameter_search_results.json  prep_submission_kaggle.py  save_prob_example.py
model/: lora.py  ngram.py
utils/: logger.py
